# remodded-nanogpt

./: .copier-answers.yml  .gitignore  LICENSE  README.md  SPECS.md  pyproject.toml
baseline/: SOURCE_SHA.txt  build_template.py
configs/feature_sets/: current_record.yaml  pr_259.yaml  pr_264.yaml  pr_299.yaml  pr_317.yaml  record_83.yaml
docs/: GENE_MAP.md  HANDOFF.md  gene_map.html  status_report.html
src/nano/: __init__.py
src/nano/builder/: __init__.py  codegen.py  context.py  render.py  validate.py
src/nano/builder/templates/: train_gpt.py.j2
src/nano/config/: __init__.py  base.py  presets.py  schema.py
src/nano/features/: __init__.py  base.py  bigram.py  kernels.py  mudd.py  optimizer.py  registry.py  schedule.py  sparse_attention_gate.py  xsa.py
src/nano/runtime/: __init__.py  flywheel.py  logging.py  manifest.py  parse_logs.py  tracking.py
src/nano/search/: __init__.py  analyze_results.py  candidate_space.py  run_combo.py
src/tests/: test_build_context.py  test_codegen.py  test_feature_validation.py  test_log_parser.py  test_manifest.py  test_search.py
